--- a/public/stylesheets/claims.css
+++ b/public/stylesheets/claims.css
@@ -4,7 +4,7 @@
             width: 760px;
             justify-content: center;
         }
-        
+
         .header {
             text-align: justify;
             color: #12aaeb;
@@ -14,7 +14,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
         }
-        
+
         .owner {
             text-align: justify;
             color: #225282;
@@ -23,19 +23,19 @@
             font-weight: bold;
             margin-bottom: 30px;
         }
-        
+
         .claimlist {
             display: flex;
             flex-direction: column;
         }
-        
+
         .claimrow {
             display: flex;
             flex-direction: row;
             height: 40px;
             margin: 10px;
         }
-        
+
         .claimdata {
             display: flex;
             flex-direction: column;
@@ -48,7 +48,7 @@
             color: #225282;
             height: 16px;
         }
-        
+
         .centereddata {
             display: flex;
             flex-direction: column;
@@ -61,7 +61,20 @@
             color: #225282;
             height: 16px;
         }
-        
+
+        .centereddataH {
+            display: flex;
+            flex-direction: column;
+            margin: 10px;
+            text-align: center;
+            font-size: 11px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            min-width: 80px;
+            color: #FFFFFF;
+            height: 16px;
+        }
+
         .financeclaimdata {
             display: flex;
             flex-direction: column;
@@ -75,7 +88,21 @@
             min-width: 70px;
             align-items: flex-end;
         }
-        
+
+        .financeclaimdataH {
+            display: flex;
+            flex-direction: column;
+            margin: 10px;
+            text-align: justify;
+            font-size: 11px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            color: #FFFFFF;
+            height: 16px;
+            min-width: 70px;
+            align-items: flex-end;
+        }
+
         .category {
             display: flex;
             flex-direction: column;
@@ -85,21 +112,21 @@
             font-weight: bold;
             letter-spacing: 1px;
             min-width: 110px;
-            color: #225282;
+            color: #FFFFFF;
             height: 16px;
             font-weight: bold;
         }
-        
+
         .claimimage {
             height: 22px;
             min-width: 30px;
             margin-right: 20px;
         }
-        
+
         .claimicon {
             min-width: 66px;
         }
-        
+
         .marker {
             width: 40px;
             display: flex;
@@ -110,14 +137,14 @@
             margin: 10px;
             height: 16px;
         }
-        
+
         .bullet {
             background: #225282;
             width: 8px;
             height: 8px;
             border-radius: 8px;
         }
-        
+
         .claimpayment {
             min-width: 100px;
             height: 36px;
@@ -131,9 +158,9 @@
             font-weight: bold;
             border: 2px solid #12aaeb;
         }
-        
+
         .claimheader {
-            background: #e7f6fd;
+            background: #485D76;
             border-radius: 4px;
             display: flex;
             flex-direction: row;
